[package]
name = "test-esp32"
version = "0.1.0"
authors = ["Sander Lysakermoen <slysakermoen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = ["esp32s3", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.21.0", features = [ "esp32s3" ] }
esp-println = { version = "0.12.0", features = [ "esp32s3", "log" ] }
esp-wifi = { version = "0.10.1", features = [ "esp32s3", "wifi", "tcp" ] }
log = { version = "0.4.22" }
smoltcp = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw" ] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3